--- a/src/components/listOfLinks/listOfLinks.module.css
+++ b/src/components/listOfLinks/listOfLinks.module.css
@@ -12,10 +12,27 @@
   width: 100%;
 }
 
+.linkBox {
+  flex-grow: 1;
+  width: 100%;
+}
+
+.linkBox svg {
+  transition: transform .2s linear;
+}
+
+.linkBox:hover svg {
+  transform: translateX(8px);
+}
+
 @media (min-width: 768px) {  
   .linkItem {
     flex-grow: 0;
     width: calc(33.3333% - var(--spacing-l));
   }
-}
 
+  .linkBox {
+    flex-grow: 0;
+    width: calc(25% - var(--spacing-l));
+  }
+}
