--- a/src/components/listOfLinks/listOfLinks.module.scss
+++ b/src/components/listOfLinks/listOfLinks.module.scss
@@ -25,12 +25,23 @@
   }
 }
 
-@media (min-width: 768px) {  
-  .linkItem {
+@media (min-width: 576px) {
+  .linkItem,
+  .linkBox {
+    flex-grow: 0;
+    width: calc(50% - var(--spacing-l));
+  }
+}
+
+@media (min-width: 992px) {
+  .linkItem,
+  .linkBox {
     flex-grow: 0;
     width: calc(33.3333% - var(--spacing-l));
   }
+}
 
+@media (min-width: 1200px) {
   .linkBox {
     flex-grow: 0;
     width: calc(25% - var(--spacing-l));
