--- a/src/components/accordion/accordion.module.scss
+++ b/src/components/accordion/accordion.module.scss
@@ -1,3 +1,9 @@
+.HDSAccordion {
+  [role="heading"] {
+    font-weight: 400;
+  }
+}
+
 .button {
   background-color: var(--color-fog-light) !important;
   border: none !important;
