--- a/src/components/liftupWithImage/liftupWithImage.module.scss
+++ b/src/components/liftupWithImage/liftupWithImage.module.scss
@@ -1,3 +1,4 @@
+@import '/styles/variables.scss';
 
 .liftupWithImage {
   position: relative;
@@ -17,7 +18,7 @@
   }
 }
 
-@media (min-width: 768px) {
+@media (min-width: $breakpoint-m) {
   .imageFullWidth {
     &.textRight {
       .liftupWithImageImage {
