--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -1,5 +1,8 @@
-$breakpoint-xs: var(--breakpoint-xs);
-$breakpoint-s: var(--breakpoint-s);
-$breakpoint-m: var(--breakpoint-m);
-$breakpoint-l: var(--breakpoint-l);
-$breakpoint-xl: var(--breakpoint-xl);
+// HDS breakpoint values for media queries.
+// because css vars can't be used with media queries.
+$breakpoint-xs: 320px;
+$breakpoint-s: 576px;
+$breakpoint-m: 768px;
+$breakpoint-l: 992px;
+$breakpoint-xl: 1248px;
+$breakpoint-2xl: 1440px;
