--- a/src/components/accordion/accordion.module.scss
+++ b/src/components/accordion/accordion.module.scss
@@ -1,3 +1,5 @@
+@import '/styles/variables.scss';
+
 .HDSAccordion {
   [role="heading"] {
     font-weight: 400;
@@ -69,7 +71,7 @@
   padding-left: var(--spacing-l);
 }
 
-@media (min-width: 576px) {
+@media (min-width: $breakpoint-s) {
   .button[id="numbered-accordion-button"] {
     padding: var(--spacing-2-xs) var(--spacing-s);
 
