--- a/src/components/hero/hero.module.scss
+++ b/src/components/hero/hero.module.scss
@@ -1,3 +1,5 @@
+@import '/styles/variables.scss';
+
 .heroContainer {
   margin-left: auto;
   margin-right: auto;
@@ -47,7 +49,7 @@
   display: none;
 }
 
-@media (min-width: 992px) {
+@media (min-width: $breakpoint-l) {
   .heroContainer {
     height: 480px;
   }
@@ -83,7 +85,7 @@
   }
 }
 
-@media (min-width: 1200px) {
+@media (min-width: $breakpoint-xl) {
   .heroTextContainer {
     align-items: center;
     padding-left: var(--spacing-layout-m);
@@ -103,7 +105,7 @@
   }
 }
 
-@media (min-width: 1440px) {
+@media (min-width: $breakpoint-2xl) {
   .heroTextContainer {
     padding-left: var(--spacing-layout-xl);
     padding-right: var(--spacing-layout-xl);
