Change textbox px to rem.

--- a/src/components/liftupWithImage/liftupWithImage.module.scss
+++ b/src/components/liftupWithImage/liftupWithImage.module.scss
@@ -66,7 +66,7 @@
     bottom: 0;
     left: 0;
     right: auto;
-    width: 460px;
+    width: 29rem;
 
     .liftupWithImageContent {
       position: absolute;
