--- a/src/components/link/link.module.scss
+++ b/src/components/link/link.module.scss
@@ -1,18 +1,21 @@
 .link {
   display: flex;
   align-items: center;
-  justify-content: space-between;
   text-decoration: underline;
   width: 100%;
 
-  &:before {
-    content: "";
-    display: block;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    position: absolute;
+  &.fullAreaLink {
+    justify-content: space-between;
+
+    &:before {
+      content: "";
+      display: block;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      position: absolute;
+    }
   }
 
   &:hover {
