--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -1,8 +1,6 @@
-// HDS breakpoint values for media queries.
-// because css vars can't be used with media queries.
-$breakpoint-xs: 320px;
-$breakpoint-s: 576px;
-$breakpoint-m: 768px;
-$breakpoint-l: 992px;
-$breakpoint-xl: 1248px;
+@import '~hds-design-tokens';
+
+// Breakpoints from S to XL come from HDS.
+// https://hds.hel.fi/design-tokens/breakpoints#tokens
+// Custom breakpoints outside HDS breakpoints:
 $breakpoint-2xl: 1440px;
