--- a/src/components/navigation/navigation.module.scss
+++ b/src/components/navigation/navigation.module.scss
@@ -91,3 +91,39 @@
     height: var(--spacing-3-xl);
   }
 }
+
+
+.footer {
+  nav {
+    @media (min-width: $breakpoint-m) {
+      display: grid !important;
+      grid-template: repeat(4, auto) / repeat(4, auto);
+      grid-auto-flow: column;
+      justify-items: left;
+    }
+  }
+  .backToTopButton {
+    font-size: var(--fontsize-body-l) !important;
+    text-decoration: none !important;
+    margin-left: auto;
+    > span {
+      display: flex;
+    }
+  }
+  > div > div {
+    justify-content: flex-start !important;
+    > div {
+      margin-right: var(--spacing-m) !important;
+      &:last-of-type {
+        flex: 1 1;
+        @media (min-width: $breakpoint-m) {
+          display: flex;
+        }
+      }
+      > a, > span {
+        align-self: center;
+      }
+    }
+  }
+}
+
