--- a/src/components/listOfLinks/listOfLinks.module.scss
+++ b/src/components/listOfLinks/listOfLinks.module.scss
@@ -5,8 +5,7 @@
   flex-direction: row;
   flex-wrap: wrap;
   width: 100%;
-  gap: var(--spacing-s);
-  justify-content: space-between;
+  gap: var(--spacing-l);
 }
 
 .linkItem {
