--- a/src/components/pageTemplates/eventPage.module.scss
+++ b/src/components/pageTemplates/eventPage.module.scss
@@ -25,7 +25,7 @@
   .location {
     display: flex;
     font-size: var(--fontsize-body-m);
-    margin-top: var(--spacing-xs);
+    margin-top: var(--spacing-2-xs);
     
     svg {
       margin-right: var(--spacing-2-xs);
