--- a/src/components/events/events.module.scss
+++ b/src/components/events/events.module.scss
@@ -6,10 +6,30 @@
   flex-wrap: wrap;
   width: 100%;
   gap: var(--spacing-xl) var(--spacing-s);
-  justify-content: space-between;
+
+  &.short {
+    justify-content: space-between;
+  }
 
   .tags {
     margin-top: -1.5rem;
+  }
+}
+
+.eventListTitleArea {
+  a {
+    display: flex;
+    align-items: center;
+    font-weight: 700;
+
+    svg {
+      margin-left: var(--spacing-s);
+      transition: transform .2s linear;
+    }
+
+    &:hover svg {
+      transform: translateX(0.5rem);
+    }
   }
 }
 
@@ -29,6 +49,10 @@
     padding: var(--spacing-xs);
   }
 
+  h3 {
+    font-weight: 700;
+  }
+
   a svg {
     color: var(--color-metro);
     transition: transform .2s linear;
@@ -45,6 +69,52 @@
   }
 }
 
+.filter,
+.results {
+  font-weight: 700;
+  padding-top: var(--spacing-s);
+  padding-bottom:  var(--spacing-2-xs);
+}
+
+.selected {
+  background-color: var(--color-bus-dark);
+  border: none !important;
+  color: var(--color-white);
+  margin-right: var(--spacing-xs);
+  margin-bottom: var(--spacing-s);
+  text-transform: capitalize;
+  width: auto;
+}
+
+.supplementary {
+  background-color: none;
+  border: none;
+  color: var(--color-black-90) !important;
+  margin-bottom: var(--spacing-s);
+}
+
+.filterTags {
+  display: flex;
+  flex-wrap: wrap;
+  position: relative;
+  list-style: none;
+  font-size: var(--fontsize-body-s);
+  padding: 0 var(--spacing-3-xs) 0 0;
+
+  .filterTag {
+    background-color: var(--color-suomenlinna-medium-light);
+    border: none;
+    color: var(--color-black-90);
+    margin-right: var(--spacing-xs);
+    margin-bottom: var(--spacing-s);
+    width: auto;
+
+    span:first-letter {
+      text-transform: capitalize;
+    }
+  }
+}
+
 .tags {
   display: flex;
   flex-wrap: wrap;
@@ -58,8 +128,11 @@
     padding: var(--spacing-3-xs) var(--spacing-xs);
     margin-right: var(--spacing-xs);
     margin-bottom: var(--spacing-2-xs);
-    text-transform: capitalize;
     width: auto;
+    
+    &:first-letter {
+      text-transform: capitalize;
+    }
   }
 }
 
@@ -69,12 +142,19 @@
   div {
     display: flex;
     font-size: var(--fontsize-body-m);
+    margin-top: var(--spacing-3-xs);
+    align-items: flex-end;
   }
 
   svg {
     margin-right: var(--spacing-xs);
   }
+}
 
+.loadMore {
+  display: flex;
+  justify-content: center;
+  padding-top: var(--spacing-l);
 }
 
 @media (min-width: $breakpoint-s) {
@@ -84,6 +164,12 @@
 }
 
 @media (min-width: $breakpoint-l) {
+  .eventListTitleArea {
+    display: flex;
+    align-items: baseline;
+    justify-content: space-between;
+  
+  }
   .eventCard {
     width: calc(33.3333% - var(--spacing-l));
   }
