--- a/src/components/link/link.module.scss
+++ b/src/components/link/link.module.scss
@@ -2,6 +2,7 @@
   display: flex;
   align-items: center;
   text-decoration: underline;
+  text-underline-offset: var(--spacing-3-xs);
   width: 100%;
 
   &.fullAreaLink {
