--- a/src/components/pageTemplates/articlePage.module.scss
+++ b/src/components/pageTemplates/articlePage.module.scss
@@ -9,10 +9,15 @@
 }
 
 .pageDivider {
-  background-color: #000;
+  background-color: var(--color-black);
   content: "";
   display: block;
-  height: 2px;
-  margin-top: 32px;
-  width: 64px;
+  height: var(--spacing-4-xs);
+  margin-top: var(--spacing-l);
+  width: var(--spacing-4-xl);
+}
+
+.articleDate{
+  color: var(--color-black-60);
+  font-size: var(--fontsize-body-m);
 }
