--- a/src/components/news/news.module.scss
+++ b/src/components/news/news.module.scss
@@ -1,6 +1,6 @@
 @import '/styles/variables.scss';
 
-.eventList {
+.newsList {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -9,10 +9,6 @@
 
   &.short {
     justify-content: space-between;
-  }
-
-  .tags {
-    margin-top: -1.5rem;
   }
 }
 
@@ -27,7 +23,7 @@
       transition: transform .2s linear;
     }
 
-    &:hover svg {
+    &:hover {
       transform: translateX(0.5rem);
     }
   }
@@ -37,117 +33,44 @@
   max-width: 50rem;
 }
 
-.eventCard {
+.newsCard {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   flex-grow: 1;
-  width: 100%;
-
-  &> div {
-    height: 100%;
-  }
-
-  .eventCardContent {
-    padding: var(--spacing-xs);
-  }
+  border-left: 0.5rem solid var(--color-metro);
+  padding: 0 0 0 1rem;
+  height: var(--spacing-layout-xl);
+  overflow:hidden;
+  word-wrap: break-word;
 
   h3 {
     font-weight: 700;
+    word-wrap: break-word;
+    margin: 0;
   }
 
-  a svg {
-    color: var(--color-metro);
+  p {
+    margin: 0;
+  }
+
+  a {
+    text-decoration: none;
     transition: transform .2s linear;
+    margin: 0;
   }
 
-  &:hover a svg {
+  &:hover a {
     transform: translateX(0.5rem);
   }
-}
 
-.linkBox {
-  & > div {
-    padding: 0 0 4rem 0;
-  }
-}
+  .newsTitle {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
 
-.filter,
-.results {
-  font-weight: 700;
-  padding-top: var(--spacing-s);
-  padding-bottom:  var(--spacing-2-xs);
-}
-
-.selected {
-  background-color: var(--color-bus-dark);
-  border: none !important;
-  color: var(--color-white);
-  margin-right: var(--spacing-xs);
-  margin-bottom: var(--spacing-s);
-  text-transform: capitalize;
-  width: auto;
-}
-
-.supplementary {
-  background-color: none;
-  border: none;
-  color: var(--color-black-90) !important;
-  margin-bottom: var(--spacing-s);
-}
-
-.filterTags {
-  display: flex;
-  flex-wrap: wrap;
-  position: relative;
-  list-style: none;
-  font-size: var(--fontsize-body-s);
-  padding: 0 var(--spacing-3-xs) 0 0;
-
-  .filterTag {
-    background-color: var(--color-suomenlinna-medium-light);
-    border: none;
-    color: var(--color-black-90);
-    margin-right: var(--spacing-xs);
-    margin-bottom: var(--spacing-s);
-    width: auto;
-
-    span:first-letter {
-      text-transform: capitalize;
-    }
-  }
-}
-
-.tags {
-  display: flex;
-  flex-wrap: wrap;
-  position: relative;
-  list-style: none;
-  font-size: var(--fontsize-body-s);
-  padding: 0 var(--spacing-3-xs) 0 0;
-
-  .tag {
-    background-color: var(--color-suomenlinna-medium-light);
-    padding: var(--spacing-3-xs) var(--spacing-xs);
-    margin-right: var(--spacing-xs);
-    margin-bottom: var(--spacing-2-xs);
-    width: auto;
-
-    &:first-letter {
-      text-transform: capitalize;
-    }
-  }
-}
-
-.dateTime {
-  padding: 0;
-
-  div {
-    display: flex;
-    font-size: var(--fontsize-body-m);
-    margin-top: var(--spacing-3-xs);
-    align-items: flex-end;
-  }
-
-  svg {
-    margin-right: var(--spacing-xs);
   }
 }
 
@@ -158,7 +81,7 @@
 }
 
 @media (min-width: $breakpoint-s) {
-  .eventCard {
+  .newsCard {
     width: calc(50% - var(--spacing-l));
   }
 }
@@ -170,13 +93,16 @@
     justify-content: space-between;
 
   }
-  .eventCard {
-    width: calc(33.3333% - var(--spacing-l));
+  .newsCard {
+    width: calc(50% - var(--spacing-l));
   }
 }
 
 @media (min-width: $breakpoint-xl) {
-  .eventCard {
+  .newsCard {
     flex-grow: 0;
+  }
+  .newsCard {
+    width: calc(50% - var(--spacing-l));
   }
 }
