--- a/src/components/news/news.module.scss
+++ b/src/components/news/news.module.scss
@@ -44,6 +44,7 @@
   height: var(--spacing-layout-xl);
   overflow:hidden;
   word-wrap: break-word;
+  width: 100%;
 
   h3 {
     font-weight: 700;
@@ -68,6 +69,12 @@
     -webkit-box-orient: vertical;
 
   }
+}
+
+.loadMore {
+  display: flex;
+  justify-content: center;
+  padding-top: var(--spacing-l);
 }
 
 @media (min-width: $breakpoint-s) {
