--- a/src/components/tprUnits/units.module.scss
+++ b/src/components/tprUnits/units.module.scss
@@ -1,17 +1,25 @@
+@import '/styles/variables.scss';
+
 .unitsList {
     > * {
-        display: flex;
-        flex: 1 auto;
+        @media (min-width: $breakpoint-l) {
+            display: flex;
+            flex-flow: row wrap;
+            flex: 1 auto;
+        }
     }
 
     .card {
         border: 2px solid var(--color-black);
         margin-bottom: var(--spacing-m);
-        height: 260px;
+        min-height: 260px;
     }
 
     .media {
-        width: 33.33%;
+
+        @media (min-width: $breakpoint-l) {
+            width: 33.33%;
+        }
 
         img {
             width: 100%;
@@ -21,17 +29,23 @@
 
     .description {
         display: flex;
-        flex-flow: column wrap;
-        width: 66.66%;
+        flex-flow: column wrap;        
         padding: var(--spacing-m);
+
+        @media (min-width: $breakpoint-l) {
+            width: 66.66%;
+        }
 
         h3 {
             margin: 0;
         }
 
         .link {
-            align-self: flex-end;
             margin-top: auto;
+
+            @media (min-width: $breakpoint-l) {
+                align-self: flex-end;
+            }
 
             a {
                 font-weight: 500;
@@ -39,16 +53,16 @@
             }
 
             span {
-                padding-right: 10px;
+                padding-right: var(--spacing-2-xs);
             }
 
             svg {
                 transition: transform .2s linear;
-              }
-            
-              &:hover svg {
+            }
+        
+            &:hover svg {
                 transform: translateX(0.5rem);
-              }
+            }
         }
     }
 }
